clean code ver. 1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Alaba</string>
+    <string name="facebook_app_id">543511113339791</string>
+    <string name="fb_login_protocol_scheme">fb543511113339791</string>
 </resources>
